# Youtube-Projects

./: LICENSE  README.md
Clicker Idler Tutorial/Assets/Materials/: brown.mat  mountain brown.mat
Clicker Idler Tutorial/Assets/Prefabs/: Enemy Man Eight Variant.prefab  Enemy Man Five Variant.prefab  Enemy Man Four Variant.prefab  Enemy Man Nine Variant.prefab  Enemy Man One Variant.prefab  Enemy Man Seven Variant.prefab  Enemy Man Six Variant.prefab  (+11 more)
Clicker Idler Tutorial/ProjectSettings/: GraphicsSettings.asset  InputManager.asset  ProjectSettings.asset
Introduction to Programming with Unity and C# (1)/Assets/: Thermostat.cs  VideoDemo.cs
Introduction to Programming with Unity and C# (1)/ProjectSettings/: ProjectSettings.asset
Introduction to Programming with Unity and C# (2)/Assets/: DebuggingTester.cs
Introduction to Programming with Unity and C# (2)/ProjectSettings/: ProjectSettings.asset
Introduction to Programming with Unity and C# (3)/ProjectSettings/: ProjectSettings.asset
Introduction to Programming with Unity and C# (4)/ProjectSettings/: ProjectSettings.asset
Unity Plays Chess/Assets/: AIVersusAIGameState.cs  ChessAI.cs  ChessBoard.cs  ChessEngine.cs  Fader.cs  Lerper.cs  green.mat
Unity Plays Chess/ProjectSettings/: ProjectSettings.asset  TagManager.asset
Voxels in Unity/ProjectSettings/: ProjectSettings.asset
Voxels in Unity/c++/: .gitignore  CMakeLists.txt
Voxels in Unity/c++/source/: main.cpp  unity_wrapper.cpp  unity_wrapper.hpp
ggj2021/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
(+177 files in other folders)
